<resources>
    <string name="app_name">OnlineStore App</string>

    // Exit confirmation Dialog
    <string name="exit_confirmation_title">Confirm Exit</string>
    <string name="exit_confirmation_message">Are you sure you want to exit?</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="label_splash_online_store">Online Store</string>

    // App Intro
    <string name="app_intro_title_1">Quick &amp; Easy Shopping</string>
    <string name="app_intro_subtitle_1">Find everything you need at your fingertips.</string>

    <string name="app_intro_title_2">Fast &amp; Secure Checkout</string>
    <string name="app_intro_subtitle_2">Enjoy quick processing and secure payments.</string>

    <string name="app_intro_title_3">All in One Place</string>
    <string name="app_intro_subtitle_3">Explore products across diverse categories, all in one app.</string>
    <string name="label_next">Next</string>
    <string name="test_tag_appintro_next_button">AppIntro Next Button</string>

</resources>